--- a/KobzaHelper/Base.lproj/Main.storyboard
+++ b/KobzaHelper/Base.lproj/Main.storyboard
@@ -11,117 +11,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="KobzaHelper" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Доступні варіанти слів:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dGf-gG-nF2">
-                                <rect key="frame" x="104.5" y="98" width="205.5" height="23"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yyl-zL-dQc">
-                                <rect key="frame" x="10" y="201" width="394" height="18"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="tfp-Rg-dgB">
-                                <rect key="frame" x="77" y="131" width="260" height="60"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="60f-4v-sQ7"/>
-                                    <constraint firstAttribute="width" constant="260" id="RRR-Ny-bHN"/>
-                                </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xgY-Yr-t9J">
-                                    <size key="itemSize" width="41" height="46"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="LetterCollectionViewCell" id="kfr-7l-wOi" customClass="LetterCollectionViewCell" customModule="KobzaHelper" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="41" height="46"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="UB7-gk-VkY">
-                                            <rect key="frame" x="0.0" y="0.0" width="41" height="46"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="L" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7aq-UL-5OH">
-                                                    <rect key="frame" x="11.5" y="4" width="18" height="38.5"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="black" pointSize="32"/>
-                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="7aq-UL-5OH" firstAttribute="centerY" secondItem="UB7-gk-VkY" secondAttribute="centerY" id="BLG-A4-z6i"/>
-                                                <constraint firstItem="7aq-UL-5OH" firstAttribute="centerX" secondItem="UB7-gk-VkY" secondAttribute="centerX" id="rwG-b6-G3f"/>
-                                            </constraints>
-                                        </collectionViewCellContentView>
-                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
-                                        <size key="customSize" width="41" height="46"/>
-                                        <connections>
-                                            <outlet property="letterLabel" destination="7aq-UL-5OH" id="822-kO-MTt"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iyh-6l-DRr">
-                                <rect key="frame" x="347" y="145.5" width="31" height="31"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="31" id="NmH-bR-UPs"/>
-                                    <constraint firstAttribute="height" constant="31" id="nfm-9J-w8C"/>
-                                </constraints>
-                                <color key="tintColor" systemColor="systemGreenColor"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="magnifyingglass.circle.fill" catalog="system"/>
-                                <connections>
-                                    <action selector="didTapOnNewRow" destination="BYZ-38-t0r" eventType="touchUpInside" id="cc5-Gs-4w1"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="Iyh-6l-DRr" firstAttribute="centerY" secondItem="tfp-Rg-dgB" secondAttribute="centerY" id="52L-6Q-q3d"/>
-                            <constraint firstItem="Iyh-6l-DRr" firstAttribute="leading" secondItem="tfp-Rg-dgB" secondAttribute="trailing" constant="10" id="EkV-3n-RBG"/>
-                            <constraint firstItem="Yyl-zL-dQc" firstAttribute="top" secondItem="tfp-Rg-dgB" secondAttribute="bottom" constant="10" id="JdQ-wR-uzR"/>
-                            <constraint firstItem="Yyl-zL-dQc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="Oh4-S0-cfZ"/>
-                            <constraint firstItem="tfp-Rg-dgB" firstAttribute="top" secondItem="dGf-gG-nF2" secondAttribute="bottom" constant="10" id="Osy-nZ-y2T"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Yyl-zL-dQc" secondAttribute="trailing" constant="10" id="QFA-yB-YJO"/>
-                            <constraint firstItem="tfp-Rg-dgB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Z6p-MZ-uKu"/>
-                            <constraint firstItem="dGf-gG-nF2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="hrw-Zr-FKg"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Yyl-zL-dQc" secondAttribute="bottom" constant="10" id="m3s-pb-qeU"/>
-                            <constraint firstItem="dGf-gG-nF2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pUM-5Q-qUZ"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="kWt-li-ly3">
-                        <barButtonItem key="rightBarButtonItem" title="Reload" id="y18-w7-zOW">
-                            <connections>
-                                <action selector="didTapOnReload" destination="BYZ-38-t0r" id="yS3-gO-E5e"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <connections>
-                        <outlet property="allWordsLabel" destination="Yyl-zL-dQc" id="WeD-Fd-Mgf"/>
-                        <outlet property="collectionView" destination="tfp-Rg-dgB" id="Mf5-iR-OKH"/>
-                        <outlet property="infoLabel" destination="dGf-gG-nF2" id="mRL-dH-VnN"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="944.92753623188412" y="67.633928571428569"/>
-        </scene>
         <!--Кобза помічник-->
         <scene sceneID="SS8-QR-4Dl">
             <objects>
-                <viewController id="eEC-G9-vF4" customClass="ViewController2" customModule="KobzaHelper" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="eEC-G9-vF4" customClass="ViewController" customModule="KobzaHelper" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hcB-0l-e4z">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -429,24 +322,6 @@
             <point key="canvasLocation" x="2799" y="727"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="PT5-KK-5tL">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="8FN-xM-Sxl" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="a2a-8P-dzv">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="2yK-Tt-cVz"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tZ0-aJ-fmK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="34.782608695652179" y="67.633928571428569"/>
-        </scene>
-        <!--Navigation Controller-->
         <scene sceneID="hE8-zf-656">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="i12-Nw-tSq" sceneMemberID="viewController">
@@ -467,12 +342,8 @@
     </scenes>
     <resources>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
-        <image name="magnifyingglass.circle.fill" catalog="system" width="128" height="121"/>
         <image name="questionmark.circle" catalog="system" width="128" height="121"/>
         <image name="xmark.circle" catalog="system" width="128" height="121"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
