--- a/KobzaHelper/Base.lproj/Main.storyboard
+++ b/KobzaHelper/Base.lproj/Main.storyboard
@@ -79,7 +79,7 @@
                                 </connections>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" text="_" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="JxX-H2-nai">
-                                <rect key="frame" x="10" y="265" width="394" height="587"/>
+                                <rect key="frame" x="10" y="297.5" width="394" height="554.5"/>
                                 <color key="backgroundColor" red="0.078431372549019607" green="0.0" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                 <inset key="scrollIndicatorInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="10"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -87,7 +87,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JhI-5p-PC0">
-                                <rect key="frame" x="17" y="245.5" width="387" height="14.5"/>
+                                <rect key="frame" x="17" y="278" width="160" height="14.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
                                 <color key="textColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.97115189825930359" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -108,9 +108,22 @@
                                 </connections>
                             </button>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="U9f-P9-CIT">
-                                <rect key="frame" x="197" y="277" width="20" height="20"/>
+                                <rect key="frame" x="197" y="309.5" width="20" height="20"/>
                                 <color key="color" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </activityIndicatorView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="tzR-CY-wMC">
+                                <rect key="frame" x="187" y="256.5" width="217" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="217" id="WXX-xn-Z10"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="За рейтингом"/>
+                                    <segment title="За алфавітом"/>
+                                </segments>
+                                <connections>
+                                    <action selector="segmentedControlValueChanged:" destination="eEC-G9-vF4" eventType="valueChanged" id="f8V-aB-VVK"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ItB-Yq-Du4"/>
                         <color key="backgroundColor" red="0.21176470588235294" green="0.14117647058823529" blue="0.25882352941176467" alpha="1" colorSpace="calibratedRGB"/>
@@ -126,11 +139,13 @@
                             <constraint firstItem="JxX-H2-nai" firstAttribute="top" secondItem="JhI-5p-PC0" secondAttribute="bottom" constant="5" id="LGJ-5L-ILv"/>
                             <constraint firstItem="OBQ-8k-LqG" firstAttribute="centerY" secondItem="X5E-Z3-NOe" secondAttribute="centerY" id="Mjm-ip-bMn"/>
                             <constraint firstItem="ItB-Yq-Du4" firstAttribute="trailing" secondItem="OBQ-8k-LqG" secondAttribute="trailing" constant="10" id="Oyr-53-XjL"/>
-                            <constraint firstItem="JhI-5p-PC0" firstAttribute="top" secondItem="X5E-Z3-NOe" secondAttribute="bottom" constant="-1" id="Po4-oD-UKz"/>
                             <constraint firstItem="7UG-gY-evQ" firstAttribute="leading" secondItem="ItB-Yq-Du4" secondAttribute="leading" constant="10" id="X28-7U-nZ4"/>
+                            <constraint firstItem="JxX-H2-nai" firstAttribute="top" secondItem="tzR-CY-wMC" secondAttribute="bottom" constant="10" id="Y9j-WN-5ak"/>
                             <constraint firstItem="X5E-Z3-NOe" firstAttribute="leading" secondItem="ItB-Yq-Du4" secondAttribute="leading" constant="10" id="Z3H-1x-p2h"/>
-                            <constraint firstItem="ItB-Yq-Du4" firstAttribute="trailing" secondItem="JhI-5p-PC0" secondAttribute="trailing" constant="10" id="ciT-id-DLR"/>
+                            <constraint firstItem="tzR-CY-wMC" firstAttribute="leading" secondItem="JhI-5p-PC0" secondAttribute="trailing" constant="10" id="bx4-sB-soF"/>
+                            <constraint firstItem="ItB-Yq-Du4" firstAttribute="trailing" secondItem="tzR-CY-wMC" secondAttribute="trailing" constant="10" id="etT-9n-y5M"/>
                             <constraint firstItem="X5E-Z3-NOe" firstAttribute="top" secondItem="7UG-gY-evQ" secondAttribute="bottom" constant="8" symbolic="YES" id="hsM-pX-gTd"/>
+                            <constraint firstItem="tzR-CY-wMC" firstAttribute="top" secondItem="X5E-Z3-NOe" secondAttribute="bottom" constant="10" id="ih1-jX-MZd"/>
                             <constraint firstItem="ItB-Yq-Du4" firstAttribute="trailing" secondItem="JxX-H2-nai" secondAttribute="trailing" constant="10" id="jnz-qM-J0x"/>
                             <constraint firstItem="OBQ-8k-LqG" firstAttribute="height" secondItem="X5E-Z3-NOe" secondAttribute="height" id="se0-Bw-wDQ"/>
                         </constraints>
