--- a/KobzaHelper/Base.lproj/Main.storyboard
+++ b/KobzaHelper/Base.lproj/Main.storyboard
@@ -80,12 +80,11 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" text="_" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="JxX-H2-nai">
                                 <rect key="frame" x="10" y="297.5" width="394" height="554.5"/>
                                 <color key="backgroundColor" red="0.078431372549019607" green="0.0" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
-                                <inset key="scrollIndicatorInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="10"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JhI-5p-PC0">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JhI-5p-PC0">
                                 <rect key="frame" x="17" y="278" width="160" height="14.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
                                 <color key="textColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.97115189825930359" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -108,6 +107,22 @@
                                     <action selector="segmentedControlValueChanged:" destination="eEC-G9-vF4" eventType="valueChanged" id="f8V-aB-VVK"/>
                                 </connections>
                             </segmentedControl>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DwD-7O-xzN">
+                                <rect key="frame" x="34" y="787" width="346.5" height="50"/>
+                                <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="SX1-Ed-Aa1"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="370" id="cQT-QD-YyR"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="        Розблокувати всі слова        ">
+                                    <fontDescription key="titleFontDescription" type="system" weight="heavy" pointSize="21"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="unlockButtonAction" destination="eEC-G9-vF4" eventType="touchUpInside" id="MPo-l1-AYL"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ItB-Yq-Du4"/>
                         <color key="backgroundColor" red="0.21176470588235294" green="0.14117647058823529" blue="0.25882352941176467" alpha="1" colorSpace="calibratedRGB"/>
@@ -123,11 +138,14 @@
                             <constraint firstItem="7UG-gY-evQ" firstAttribute="leading" secondItem="ItB-Yq-Du4" secondAttribute="leading" constant="10" id="X28-7U-nZ4"/>
                             <constraint firstItem="JxX-H2-nai" firstAttribute="top" secondItem="tzR-CY-wMC" secondAttribute="bottom" constant="10" id="Y9j-WN-5ak"/>
                             <constraint firstItem="X5E-Z3-NOe" firstAttribute="leading" secondItem="ItB-Yq-Du4" secondAttribute="leading" constant="10" id="Z3H-1x-p2h"/>
+                            <constraint firstItem="DwD-7O-xzN" firstAttribute="centerX" secondItem="hcB-0l-e4z" secondAttribute="centerX" id="aPg-ez-405"/>
                             <constraint firstItem="tzR-CY-wMC" firstAttribute="leading" secondItem="JhI-5p-PC0" secondAttribute="trailing" constant="10" id="bx4-sB-soF"/>
                             <constraint firstItem="ItB-Yq-Du4" firstAttribute="trailing" secondItem="tzR-CY-wMC" secondAttribute="trailing" constant="10" id="etT-9n-y5M"/>
                             <constraint firstItem="X5E-Z3-NOe" firstAttribute="top" secondItem="7UG-gY-evQ" secondAttribute="bottom" constant="8" symbolic="YES" id="hsM-pX-gTd"/>
                             <constraint firstItem="tzR-CY-wMC" firstAttribute="top" secondItem="X5E-Z3-NOe" secondAttribute="bottom" constant="10" id="ih1-jX-MZd"/>
                             <constraint firstItem="ItB-Yq-Du4" firstAttribute="trailing" secondItem="JxX-H2-nai" secondAttribute="trailing" constant="10" id="jnz-qM-J0x"/>
+                            <constraint firstItem="DwD-7O-xzN" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ItB-Yq-Du4" secondAttribute="leading" constant="25" id="l4B-vN-eTU"/>
+                            <constraint firstItem="ItB-Yq-Du4" firstAttribute="bottom" secondItem="DwD-7O-xzN" secondAttribute="bottom" constant="25" id="tF7-Ev-KQ7"/>
                             <constraint firstItem="X5E-Z3-NOe" firstAttribute="centerX" secondItem="hcB-0l-e4z" secondAttribute="centerX" id="wjY-bP-a5F"/>
                         </constraints>
                     </view>
@@ -153,6 +171,7 @@
                         <outlet property="excludeField" destination="X5E-Z3-NOe" id="vUm-XO-nDH"/>
                         <outlet property="infoLabel" destination="JhI-5p-PC0" id="LvE-i1-unZ"/>
                         <outlet property="resultField" destination="JxX-H2-nai" id="Zif-z1-azh"/>
+                        <outlet property="unlockButton" destination="DwD-7O-xzN" id="EKG-sd-MyR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b57-cB-tqb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -338,6 +357,9 @@
     <resources>
         <image name="questionmark.circle" catalog="system" width="128" height="121"/>
         <image name="xmark.circle" catalog="system" width="128" height="121"/>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
