--- a/KobzaHelper/Base.lproj/Main.storyboard
+++ b/KobzaHelper/Base.lproj/Main.storyboard
@@ -10,6 +10,88 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Word List View Controller-->
+        <scene sceneID="9ov-P1-a3T">
+            <objects>
+                <viewController id="gfU-4L-V06" customClass="WordListViewController" customModule="KobzaHelper" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cdq-fm-EdB">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="jzU-Sz-eOk">
+                                <rect key="frame" x="0.0" y="92" width="414" height="804"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="WordListTableViewCell" id="Lm0-C3-qmr" customClass="WordListTableViewCell" customModule="KobzaHelper" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="414" height="43"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Lm0-C3-qmr" id="sPz-sb-a03">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00000" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L2a-wz-biL">
+                                                    <rect key="frame" x="28" y="11" width="51.5" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="51.5" id="wf3-26-7Q4"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Word" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ntK-j1-JqP">
+                                                    <rect key="frame" x="87.5" y="11" width="306.5" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="51.5" id="GL7-YY-ZiH"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="ntK-j1-JqP" secondAttribute="trailing" id="Lbv-o7-3pM"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="L2a-wz-biL" secondAttribute="bottom" id="Ldh-hx-KuQ"/>
+                                                <constraint firstItem="L2a-wz-biL" firstAttribute="top" secondItem="sPz-sb-a03" secondAttribute="topMargin" id="Lkq-UR-7fW"/>
+                                                <constraint firstItem="ntK-j1-JqP" firstAttribute="leading" secondItem="L2a-wz-biL" secondAttribute="trailing" constant="8" id="RKD-5z-cN2"/>
+                                                <constraint firstItem="L2a-wz-biL" firstAttribute="leading" secondItem="sPz-sb-a03" secondAttribute="leadingMargin" constant="8" id="UhC-El-cQy"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="ntK-j1-JqP" secondAttribute="bottom" id="YCk-44-2Yg"/>
+                                                <constraint firstItem="ntK-j1-JqP" firstAttribute="top" secondItem="sPz-sb-a03" secondAttribute="topMargin" id="yMk-ic-TVv"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <outlet property="indexLabel" destination="L2a-wz-biL" id="Z1X-mp-68x"/>
+                                            <outlet property="wordLabel" destination="ntK-j1-JqP" id="AcG-bN-8xh"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="0I8-Wc-6b4"/>
+                        <color key="backgroundColor" red="0.21176470588235294" green="0.14117647058823529" blue="0.25882352941176467" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="jzU-Sz-eOk" firstAttribute="top" secondItem="0I8-Wc-6b4" secondAttribute="top" id="DAm-Ug-3g1"/>
+                            <constraint firstItem="jzU-Sz-eOk" firstAttribute="leading" secondItem="0I8-Wc-6b4" secondAttribute="leading" id="I2d-b1-h9x"/>
+                            <constraint firstItem="0I8-Wc-6b4" firstAttribute="trailing" secondItem="jzU-Sz-eOk" secondAttribute="trailing" id="Sra-rV-y1y"/>
+                            <constraint firstAttribute="bottom" secondItem="jzU-Sz-eOk" secondAttribute="bottom" id="hbE-qN-NKX"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="ZIf-2L-PgD">
+                        <barButtonItem key="rightBarButtonItem" image="plus.circle" catalog="system" id="v8X-tk-eOR">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonTapped:" destination="gfU-4L-V06" id="jc1-ZD-ldt"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="jzU-Sz-eOk" id="AKH-wT-oA9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zj3-U9-VAR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2798.5507246376815" y="-573.21428571428567"/>
+        </scene>
         <!--Кобза помічник-->
         <scene sceneID="SS8-QR-4Dl">
             <objects>
@@ -151,6 +233,12 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Кобза помічник" largeTitleDisplayMode="always" id="dH7-M7-i6c">
+                        <barButtonItem key="leftBarButtonItem" image="list.number" catalog="system" id="XQ1-WS-WRr">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <segue destination="gfU-4L-V06" kind="push" id="NIR-Rz-vSJ"/>
+                            </connections>
+                        </barButtonItem>
                         <rightBarButtonItems>
                             <barButtonItem image="xmark.circle" catalog="system" id="GId-6d-btS">
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -356,6 +444,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="list.number" catalog="system" width="128" height="97"/>
+        <image name="plus.circle" catalog="system" width="128" height="123"/>
         <image name="questionmark.circle" catalog="system" width="128" height="123"/>
         <image name="xmark.circle" catalog="system" width="128" height="123"/>
         <systemColor name="systemBlueColor">
